# AIE8-cert-challenge

./: .gitignore  Dockerfile  README.md  app.py  check_setup.py  config.py  docker-compose.yml  env.example  frontend.py  get_api_keys.py  pyproject.toml  rag_components.py  requirements_frontend.txt  run_evaluation.py  setup.py  start.sh  test_app.py
data/: ma_solution_engineer_questions.md  sample_faq.md  sample_product_specs.md  sample_rfp_responses.md
docs/: certification_validation_report.md  project_doc.md  rag_components_architecture.md  rag_tools_overview.md  simple_rag_diagram.md
metrics/: .gitkeep  golden_dataset_20251019_105513.json  rag_evaluation_report_20251019_105513.txt  rag_evaluation_report_20251019_110147.txt  rag_evaluation_report_20251019_110641.txt  rag_evaluation_report_20251019_110804.txt  rag_evaluation_report_20251019_111202.txt  rag_evaluation_results_20251019_105513.json  rag_evaluation_results_20251019_110147.json  rag_evaluation_results_20251019_110641.json  rag_evaluation_results_20251019_110804.json  rag_evaluation_results_20251019_111202.json  rag_evaluation_results_20251019_120834.json  rag_evaluation_results_20251019_154421.json  rag_evaluation_summary_20251019_105513.json  rag_evaluation_summary_20251019_110147.json  rag_evaluation_summary_20251019_110641.json  rag_evaluation_summary_20251019_110804.json  rag_evaluation_summary_20251019_111202.json  rag_evaluation_summary_20251019_120927.json  rag_evaluation_summary_20251019_154421.json
notebooks/: rag_demo.ipynb  rag_pipeline.ipynb  se_rag_agent.ipynb
notebooks/.ipynb_checkpoints/: se_rag_agent-checkpoint.ipynb
